--- a/detail-album.html
+++ b/detail-album.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="icon"   href="img/logosoundnow.jpeg" type="image/png" />
-    <title>Detalle del Álbum</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link  class="logo"rel="icon" href="img/sound1.jpg" type="image/png" />
+    <title>SOUND-NOW</title>
 </head>
-<header>
+<body>
+    <header>
         <article class="cajainicio">
             <nav class="header-items">
                 <section class="BarraDeBusqueda">
                         <div class="menu">
-                            <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <a href="index.html"><img class="logo" src="./img/sound1.jpg" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
