--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </li>
                 <li class="caja">
                     <a href="./detail-artist.html" class="names">Bob Marley</a>
-                    <a href="./detail-track.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
                 </li>
                 <li class="caja">
                     <a href="./detail-artist.html" class="names">Ricky Martin</a>
