--- a/playlists.html
+++ b/playlists.html
@@ -35,6 +35,11 @@
         </nav>
         </article>
     </header>
+    <div class="playlist">
+        <h1 > Mi Playlist</a></h1>
+        </div>
+ 
+</main>
     <footer> <div class="footer">  
         <div class="instagram">
                 <div class="names">Seguinos:</div>
