--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <a href="playlists.html" class="barratexto">Playlists</a>
                                 <div class="perfil-menu">
                         <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                         </section>
                 </div>
                         </div>
