--- a/generos.html
+++ b/generos.html
@@ -9,32 +9,32 @@
     <title>SOUND-NOW</title>
 </head>
 <body>
-    <header>
-        <article class="cajainicio">
-            <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
-                            <a href="index.html"><img class="logo" src="./img/sound1.jpg" alt="logo"></a>
-                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                <a href="index.html" class="barratexto">Home</a>  
-                                <a href="artistas.html" class="barratexto">Artistas</a>
-                                <a href="albumes.html" class="barratexto">Álbumes</a>
-                                <a href="generos.html" class="barratexto">Géneros</a>
-                                <a href="playlists.html" class="barratexto">Playlists</a>
-                                <div class="perfil-menu">
-                        <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                        </section>
-                </div>
+        <header>
+                <article class="cajainicio">
+                    <nav class="header-items">
+                        <section class="BarraDeBusqueda">
+                                <div class="menu">
+                                    <a href="index.html"><img class="logo" src="./img/sounddd1.png" alt="logo"></a>
+                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                                        <a href="index.html" class="barratexto">Home</a>  
+                                        <a href="artistas.html" class="barratexto">Artistas</a>
+                                        <a href="albumes.html" class="barratexto">Álbumes</a>
+                                        <a href="generos.html" class="barratexto">Géneros</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <div class="perfil-menu">
+                                <section class="icperfil">
+                                    <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                                </section>
                         </div>
-                        <form action="search-results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
-                </section>
-        </nav>
-        </article>
-    </header>
+                                </div>
+                                <form action="search-results.html" method="GET" class="buscar">
+                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                                    <button type="submit" class="button">Buscar</button>
+                            </form>
+                        </section>
+                </nav>
+                </article>
+            </header>
     <div class="acaja">
             <h2 class="pag"> Géneros</h2>
             <section class="listas">
