--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="header-items">
                 <section class="BarraDeBusqueda">
                         <div class="menu">
-                            <a href="index.html"><img class="logo" src="./img/sound1.jpg" alt="logo"></a>
+                            <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
@@ -23,11 +23,11 @@
                                 <a href="playlists.html" class="barratexto">Playlists</a>
                                 <div class="perfil-menu">
                         <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                         </section>
                 </div>
                         </div>
-                       <form action="search-results.html" method="GET" class="buscar">
+                        <form action="search-results.html" method="GET" class="buscar">
                             <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button">Buscar</button>
                     </form>
