--- a/generos.html
+++ b/generos.html
@@ -14,7 +14,7 @@
                     <nav class="header-items">
                         <section class="BarraDeBusqueda">
                                 <div class="menu">
-                                    <a href="index.html"><img class="logo" src="./img/sounddd1.png" alt="logo"></a>
+                                    <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
                                         <a href="artistas.html" class="barratexto">Artistas</a>
