--- a/playlists.html
+++ b/playlists.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link  class="logo"rel="icon" href="img/sound1.jpg" type="image/png" />
+    <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>SOUND-NOW</title>
 </head>
 <body>
@@ -22,15 +22,15 @@
                                 <a href="generos.html" class="barratexto">Géneros</a>
                                 <a href="playlists.html" class="barratexto">Playlists</a>
                                 <div class="perfil-menu">
+                                    
                         <section class="icperfil">
                             <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                         </section>
-                </div>
-                        </div>
+                         </div>
                         <form action="search-results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
+                            <input id= "ba" type="text" name="search" placeholder = "Search">
+                            <button type="submit" class="button"> Buscar</button>
+                        </form>
                 </section>
         </nav>
         </article>
@@ -38,7 +38,7 @@
     <div class="playlist">
         <h1 > Mi Playlist</a></h1>
         </div>
-        
+
 </main>
     <footer> <div class="footer">  
         <div class="instagram">
