--- a/detail-track.html
+++ b/detail-track.html
@@ -5,39 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link  class="logo"rel="icon" href="img/sound1.jpg" type="image/png" />
+    <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>SOUND-NOW</title>
 </head>
 <body>
-    <header>
-        <article class="cajainicio">
-            <nav class="header-items">
-                <section class="BarraDeBusqueda">
-                        <div class="menu">
-                            <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
-                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                <a href="index.html" class="barratexto">Home</a>  
-                                <a href="artistas.html" class="barratexto">Artistas</a>
-                                <a href="albumes.html" class="barratexto">Álbumes</a>
-                                <a href="generos.html" class="barratexto">Géneros</a>
-                                <a href="playlists.html" class="barratexto">Playlists</a>
-                                <div class="perfil-menu">
-                        <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+        <header>
+                <article class="cajainicio">
+                    <nav class="header-items">
+                        <section class="BarraDeBusqueda">
+                                <div class="menu">
+                                    <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
+                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                                        <a href="index.html" class="barratexto">Home</a>  
+                                        <a href="artistas.html" class="barratexto">Artistas</a>
+                                        <a href="albumes.html" class="barratexto">Álbumes</a>
+                                        <a href="generos.html" class="barratexto">Géneros</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <div class="perfil-menu">
+                                            
+                                <section class="icperfil">
+                                    <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                                </section>
+                                 </div>
+                                <form action="search-results.html" method="GET" class="buscar">
+                                    <input id= "ba" type="text" name="search" placeholder = "Search">
+                                    <button type="submit" class="button"> Buscar</button>
+                                </form>
                         </section>
-                </div>
-                        </div>
-                        <form action="search-results.html" method="GET" class="buscar">
-                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                            <button type="submit" class="button">Buscar</button>
-                    </form>
-                </section>
-        </nav>
-        </article>
-    </header>
+                </nav>
+                </article>
+            </header>
     <main>
       <div class=detallestrack>
-              <h3>Peaches</h3>
+              <h3>Peaches</h3> 
               <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
                 <li>Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
@@ -45,6 +45,7 @@
                 <li>Álbum: Justice</li>
                 <li>Fecha de lanzamiento: 2021</li>
                 <li>Álbum: Justice</li>
+                <li><a href="./playlists.html"><img class="fav"src="./img/fav.jpg" alt=""></a></li>
         </ul>
       </div>
     </main>
