--- a/search-results.html
+++ b/search-results.html
@@ -45,17 +45,24 @@
             </ul>
         </article>
     </main>
-            <footer> <div class="footer">  
-                <div class="instagram">
-                        <div class="names">Seguinos:</div>
-                        <div>
-                        <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                        <ul class="equipo">
-                            <li class="names">Hania Achaval</li>
-                            <li class="names">Justina Basombrio</li>
-                            <li class="names">Malena Bensadon</li>
-                        </ul></div>
-        </div>
-                 </footer>
+    <footer> 
+        <article class="footer">  
+        <article class="instagram">
+                <article class="names">Seguinos:</article>
+                <article>
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+                </article>
+        </article>
+
+        <section class="equipo">
+                <h3>Equipo:</h3>
+                <ul class="miembros">
+                    <li class="nombre">Hania Achaval</li>
+                    <li class="nombre">Justina Basombrio</li>
+                    <li class="nombre">Malena Bensadon</li>
+                </ul>
+        </section>
+    </section>
+         </footer>
         </body>
         </html>
