--- a/albumes.html
+++ b/albumes.html
@@ -13,7 +13,7 @@
                 <article class="cajainicio">
                     <nav class="header-items">
                         <section class="BarraDeBusqueda">
-                                <div class="menu">
+                                <article class="menu">
                                     <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
@@ -21,12 +21,12 @@
                                         <a href="albumes.html" class="barratexto">Álbumes</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
                                         <a href="playlists.html" class="barratexto">Playlists</a>
-                                        <div class="perfil-menu">
+                                        <article class="perfil-menu">
                                             
                                 <section class="icperfil">
                                     <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                                 </section>
-                                 </div>
+                                </article>
                                 <form action="search-results.html" method="GET" class="buscar">
                                     <input id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button"> Buscar</button>
@@ -38,7 +38,7 @@
             <section class="acaja">
                 <h2 class="pag">Álbumes</h2>
                 <ul class="listas">
-                    <div class="album">
+                    <section class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
                         <h2 class="texto"><a href="./detail-album.html" class="names">X</a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
@@ -62,7 +62,7 @@
                                 <li>Even My Dad Does Sometimes</li>
                                 <li>I See Fire</li>
                         </ol>      
-                </div>
+                </section>
                 <div class="album">
                     <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
@@ -160,23 +160,23 @@
                 </ul>
         </section>
     </main>
-    <footer> <div class="footer">  
-        <div class="instagram">
-                <div class="names">Seguinos:</div>
-                <div>
+    <footer> <article class="footer">  
+        <article class="instagram">
+                <article class="names">Seguinos:</article>
+                <article>
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </div>
-        </div>
+                </article>
+        </article>
 
-        <div class="equipo">
+        <section class="equipo">
                 <h3>Equipo:</h3>
                 <ul class="miembros">
                     <li class="nombre">Hania Achaval</li>
                     <li class="nombre">Justina Basombrio</li>
                     <li class="nombre">Malena Bensadon</li>
                 </ul>
-        </div>
-</div>
+        </section>
+    </section>
          </footer>
 </body>
 </html>
