--- a/detail-track.html
+++ b/detail-track.html
@@ -13,7 +13,7 @@
                 <article class="cajainicio">
                     <nav class="header-items">
                         <section class="BarraDeBusqueda">
-                                <div class="menu">
+                                <article class="menu">
                                     <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                                     <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
@@ -21,12 +21,12 @@
                                         <a href="albumes.html" class="barratexto">Álbumes</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
                                         <a href="playlists.html" class="barratexto">Playlists</a>
-                                        <div class="perfil-menu">
+                                        <article class="perfil-menu">
                                             
                                 <section class="icperfil">
                                     <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                                 </section>
-                                 </div>
+                                        </article>
                                 <form action="search-results.html" method="GET" class="buscar">
                                     <input id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button"> Buscar</button>
@@ -36,7 +36,7 @@
                 </article>
             </header>
     <main>
-      <div class=detallestrack>
+      <article class=detallestrack>
               <h3>Peaches</h3> 
               <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
@@ -47,25 +47,26 @@
                 <li>Álbum: Justice</li>
                 <li><a href="./playlists.html"><img class="fav"src="./img/fav.jpg" alt=""></a></li>
         </ul>
-      </div>
+      </article>
     </main>
-    <footer> <div class="footer">  
-        <div class="instagram">
-                <div class="names">Seguinos:</div>
-                <div>
+    <footer> 
+            <article class="footer">  
+        <article class="instagram">
+                <article class="names">Seguinos:</article>
+                <article>
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </div>
-        </div>
+                </article>
+        </article>
 
-        <div class="equipo">
+        <section class="equipo">
                 <h3>Equipo:</h3>
                 <ul class="miembros">
                     <li class="nombre">Hania Achaval</li>
                     <li class="nombre">Justina Basombrio</li>
                     <li class="nombre">Malena Bensadon</li>
                 </ul>
-        </div>
-</div>
+        </section>
+    </section>
          </footer>
 </body>
 </html>
