--- a/index.html
+++ b/index.html
@@ -140,22 +140,24 @@
          </div>
 
     </main>
-    <footer> <div class="footer">  
-        <div class="instagram">
-                <div class="names">Seguinos:</div>
-                <div>
+    <footer> 
+        <article class="footer">  
+        <article class="instagram">
+                <article class="names">Seguinos:</article>
+                <article>
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </div>
-        </div>
-        <div class="equipo">
+                </article>
+        </article>
+
+        <section class="equipo">
                 <h3>Equipo:</h3>
                 <ul class="miembros">
                     <li class="nombre">Hania Achaval</li>
                     <li class="nombre">Justina Basombrio</li>
                     <li class="nombre">Malena Bensadon</li>
                 </ul>
-        </div>
-</div>
+        </section>
+    </section>
          </footer>
 </body>
 </html>
