--- a/perfil.html
+++ b/perfil.html
@@ -59,23 +59,23 @@
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
-    <footer> <div class="footer">  
-        <div class="instagram">
-                <div class="names">Seguinos:</div>
-                <div>
+    <footer> <article class="footer">  
+        <article class="instagram">
+                <article class="names">Seguinos:</article>
+                <article>
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </div>
-        </div>
+                </article>
+        </article>
 
-        <div class="equipo">
+        <section class="equipo">
                 <h3>Equipo:</h3>
                 <ul class="miembros">
                     <li class="nombre">Hania Achaval</li>
                     <li class="nombre">Justina Basombrio</li>
                     <li class="nombre">Malena Bensadon</li>
                 </ul>
-        </div>
-</div>
+        </section>
+    </section>
          </footer>
 </body>
 </html>
