--- a/playlists.html
+++ b/playlists.html
@@ -40,23 +40,24 @@
         </div>
 
 </main>
-    <footer> <div class="footer">  
-        <div class="instagram">
-                <div class="names">Seguinos:</div>
-                <div>
-                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </div>
-        </div>
+<footer> 
+    <article class="footer">  
+    <article class="instagram">
+            <article class="names">Seguinos:</article>
+            <article>
+            <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
+            </article>
+    </article>
 
-        <div class="equipo">
-                <h3>Equipo:</h3>
-                <ul class="miembros">
-                    <li class="nombre">Hania Achaval</li>
-                    <li class="nombre">Justina Basombrio</li>
-                    <li class="nombre">Malena Bensadon</li>
-                </ul>
-        </div>
-</div>
-         </footer>
+    <section class="equipo">
+            <h3>Equipo:</h3>
+            <ul class="miembros">
+                <li class="nombre">Hania Achaval</li>
+                <li class="nombre">Justina Basombrio</li>
+                <li class="nombre">Malena Bensadon</li>
+            </ul>
+    </section>
+</section>
+     </footer>
 </body>
 </html>
