--- a/playlists.html
+++ b/playlists.html
@@ -35,11 +35,66 @@
         </nav>
         </article>
     </header>
-    <div class="playlist">
-        <h1 > Mi Playlist</a></h1>
-        </div>
 
+    <section class="playlist">
+        <h1 > Mi Playlist</a></h1>
+        <main>
+            <section class="containerpl">
+                <article class="cajapl">
+                    <section class="fotopl">
+                        <a href="./detail-track.html"><img class="fotop" src="./img/justin-bieber-justice.jpeg" alt=""></a>
+                    </section>
+                    <section class="infopl">
+                        <h2>Peaches</h2>
+                        <h4>Justin Bieber</h4>
+                        <img class="fotopla"src="./img/fav.jpg" alt="">
+                    </section>
+                </article>
+                <article class="cajapl">
+                    <section class="fotopl">
+                        <a href="./detail-track.html"><img class="fotop" src="./img/Alohamaluma.jpeg" alt=""></a>
+                    </section>
+                   <section class="infopl">
+                     <h2>Aloha</h2>
+                     <h4> Maluma</h4>
+                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                   </section>
+                </article>
+                <article class="cajapl">
+                    <section class="fotopl">
+                        <a href="./detail-track.html"><img class="fotop" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
+                    </section>
+                   <section class="infopl">
+                     <h2>Eye of the Tiger</h2>
+                     <h4> Survior</h4>
+                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                   </section>
+                </article>
+                <article class="cajapl">
+                    <section class="fotopl">
+                        <a href="./detail-track.html"><img class="fotop" src="./img/bobmarleynowoman.jpg" alt=""></a>
+                    </section>
+                   <section class="infopl">
+                     <h2>No Woman No Cry</h2>
+                     <h4> Bob Marley</h4>
+                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                   </section>
+                </article>
+                <article class="cajapl">
+                    <section class="fotopl">
+                        <a href="./detail-track.html"><img class="fotop" src="./img/terminales.jpg" alt=""></a>
+                    </section>
+                   <section class="infopl">
+                     <h2>Terminales</h2>
+                     <h4> Cruzando el Charco</h4>
+                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                   </section>
+                </article>
+            </section>
+            
+        </section>
 </main>
+
 <footer> 
     <article class="footer">  
     <article class="instagram">
