--- a/albumes.html
+++ b/albumes.html
@@ -38,12 +38,12 @@
             <section class="acaja">
                 <h2 class="pag">Álbumes</h2>
                 <ul class="listas">
-                    <section class="album">
+                    <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
                         <h2 class="texto"><a href="./detail-album.html" class="names">X</a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
                         <p class="texto">Generos: Pop, R&B y hip hop</p>
-                        <p>Canciones del Album</p>
+                        <p>Canciones del Album: </p>
                         <ol class="listadetallealbum">
                                 <li>One</li>
                                 <li>I'm a Mess</li>
@@ -62,14 +62,14 @@
                                 <li>Even My Dad Does Sometimes</li>
                                 <li>I See Fire</li>
                         </ol>      
-                </section>
-                <div class="album">
+                        </article>
+                <article class="album">
                     <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
                     <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
                     <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
-                    <p>Canciones del Album</p>
-                    <ul class="listadetallealbum">
+                    <p>Canciones del Album: </p>
+                    <ol class="listadetallealbum">
                             <li>I Don't Know Why</li>
                             <li>Whatever It Takes</li>
                             <li>Believer</li>
@@ -81,15 +81,16 @@
                             <li>Thunder</li>
                             <li>Start Over</li>
                             <li>Dancing in the Dark</li>
-                    </ol>      
-            </div>
-            <div class="album">
+                    </ol>   
+
+                </article>
+                <article class="album">
                 <a href="./detail-album.html"><img class="fotos" src="./img/justin-bieber-justice.jpeg" alt=""></a>
                 <h2 class="texto"><a href="./detail-album.html" class="names">Justice</a>by<a href="./detail-artist.html" class="names">Justin Bieber</a></h2>
                 <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
                 <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
-                 <p>Canciones del Album: </p>
-                 <ul class="listadetallealbum">
+                <p>Canciones del Album: </p>
+                 <ol class="listadetallealbum">
                         <li>Much</li>
                         <li>Deserve You</li>
                         <li>As I Am</li>
@@ -106,15 +107,16 @@
                         <li>Loved By You</li>
                         <li>Anyone</li>
                         <li>Loneley</li>
-                </ul>      
-        </div>
-        <div class="album">
-            <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
-            <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
-            <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
-            <p class="texto">Generos: Pop, reguetón, balada, trap</p>
-            <p>Canciones del Album</p>
-            <ul class="listadetallealbum">
+                </ol>      
+                </article>
+
+                <article class="album">
+                <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
+                <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
+                <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
+                <p class="texto">Generos: Pop, reguetón, balada, trap</p>
+                <p>Canciones del Album: </p>
+                 <ol class="listadetallealbum">
                     <li>Un beso en Madrid</li>
                     <li>Fresa</li>
                     <li>Si tú supieras</li>
@@ -129,35 +131,36 @@
                     <li>Diciembre</li>
                     <li>Sueltate el pelo</li>
                     <li>22</li>
-            </ol>      
-    </div>
-    <div class="album">
-        <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
-        <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
-        <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
-        <p class="texto">Generos: Rap rock</p>
-        <p>Canciones del Album</p>
-        <ul class="listadetallealbum">
-                <l>Purple Lamborghini</li>
-                <li>Sucker for Pain</li>
-                <li>Heathens</li>
-                <li>Standing In The Rain </li>
-                <li>Gangsta</li>
-                <li>Know Better</li>
-                <li>You Don't Own Me</li>
-                <li>Without Me</li>
-                <li>Super Freak</li>
-                <li>Wreak Havoc</li>
-                <li>Medieval Warfare</li>
-                <li>Bohemian Rhapsody</li>
-                <li>Slippin' Into Darkness</li>
-                <li>Fortunate Son</li>
-                <li>Spirit In The Sky</li>
-                <li>I'd Rather Go Blind</li>
-                <li>FI Started a Joke</li>
-        </ol>      
-</div>
-                </ul>
+                </ol>      
+               </article>
+               <article class="album">
+                <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
+                <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
+                <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
+                <p class="texto">Generos: Rap rock</p>
+                <p>Canciones del Album: </p>
+                <ol class="listadetallealbum">
+                        <li>Purple Lamborghini</li>
+                        <li>Sucker for Pain</li>
+                        <li>Heathens</li>
+                        <li>Standing In The Rain </li>
+                        <li>Gangsta</li>
+                        <li>Know Better</li>
+                        <li>You Don't Own Me</li>
+                        <li>Without Me</li>
+                        <li>Super Freak</li>
+                        <li>Wreak Havoc</li>
+                        <li>Medieval Warfare</li>
+                        <li>Bohemian Rhapsody</li>
+                        <li>Slippin' Into Darkness</li>
+                        <li>Fortunate Son</li>
+                        <li>Spirit In The Sky</li>
+                        <li>I'd Rather Go Blind</li>
+                        <li>FI Started a Joke</li>
+                </ol>    
+               </article>
+
+        </ul>
         </section>
     </main>
     <footer> <article class="footer">  
