--- a/playlists.html
+++ b/playlists.html
@@ -37,17 +37,17 @@
     </header>
 
     <section class="playlist">
-        <h1 > Mi Playlist</a></h1>
+        <h1 class="titulos"> Mi Playlist</a></h1>
         <main>
             <section class="containerpl">
                 <article class="cajapl">
                     <section class="fotopl">
-                        <a href="./detail-track.html"><img class="fotop" src="./img/justin-bieber-justice.jpeg" alt=""></a>
+                        <a href="./detail-track.html"><img class="fotop" src="./img/peaches.jpeg" alt=""></a>
                     </section>
                     <section class="infopl">
-                        <h2>Peaches</h2>
-                        <h4>Justin Bieber</h4>
-                        <img class="fotopla"src="./img/fav.jpg" alt="">
+                        <h2> <a href="./detail-track.html">Peaches</a> <a href="./playlists.html"></a></h2>
+                        <h4><a href="./detail-artist.html"> Justin Bieber </a></h4>
+                        <img class="fotopla"src="./img/play.jpg" alt="">
                     </section>
                 </article>
                 <article class="cajapl">
@@ -55,9 +55,9 @@
                         <a href="./detail-track.html"><img class="fotop" src="./img/Alohamaluma.jpeg" alt=""></a>
                     </section>
                    <section class="infopl">
-                     <h2>Aloha</h2>
-                     <h4> Maluma</h4>
-                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                    <h2> <a href="./detail-track.html">Aloha</a> <a href="./playlists.html"></a></h2>
+                    <h4><a href="./detail-artist.html"> Maluma </a></h4>
+                     <img class="fotopla"src="./img/play.jpg" alt="">
                    </section>
                 </article>
                 <article class="cajapl">
@@ -65,9 +65,9 @@
                         <a href="./detail-track.html"><img class="fotop" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
                     </section>
                    <section class="infopl">
-                     <h2>Eye of the Tiger</h2>
-                     <h4> Survior</h4>
-                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                    <h2> <a href="./detail-track.html">Eye Of The Tiger</a> <a href="./playlists.html"></a></h2>
+                    <h4><a href="./detail-artist.html"> Survior </a></h4>
+                     <img class="fotopla"src="./img/play.jpg" alt="">
                    </section>
                 </article>
                 <article class="cajapl">
@@ -75,9 +75,9 @@
                         <a href="./detail-track.html"><img class="fotop" src="./img/bobmarleynowoman.jpg" alt=""></a>
                     </section>
                    <section class="infopl">
-                     <h2>No Woman No Cry</h2>
-                     <h4> Bob Marley</h4>
-                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                    <h2> <a href="./detail-track.html"> No Woman No Cry</a> <a href="./playlists.html"></a></h2>
+                    <h4><a href="./detail-artist.html"> Bob Marley </a></h4>
+                     <img class="fotopla"src="./img/play.jpg" alt="">
                    </section>
                 </article>
                 <article class="cajapl">
@@ -85,9 +85,9 @@
                         <a href="./detail-track.html"><img class="fotop" src="./img/terminales.jpg" alt=""></a>
                     </section>
                    <section class="infopl">
-                     <h2>Terminales</h2>
-                     <h4> Cruzando el Charco</h4>
-                     <img class="fotopla"src="./img/fav.jpg" alt="">
+                     <h2> <a href="./detail-track.html">Terminales</a> <a href="./playlists.html"></a></h2>
+                     <h4><a href="./detail-artist.html"> Cruzando el Charco </a></h4>
+                     <img class="fotopla"src="./img/play.jpg" alt="">
                    </section>
                 </article>
             </section>
