--- a/search-results.html
+++ b/search-results.html
@@ -42,6 +42,8 @@
                 <li class="detail"> <a href="./detail-track.html"><img class="fotosd" src="./img/peaches.jpeg" alt=""> <p class="namesx">Peaches</p></a></p></a></li>
                 <li class="detail"> <a href="./detail-album.html"><img class="fotosd" src="./img/tini.jpg" alt=""> <p class="namesx">TINI TINI TINI</p></a></li>
                 <li class="detail"> <a href="./detail-artist.html"><img class="fotosd" src="./img/harry2.png" alt=""> <p class="namesx">Harry Styles</p></a></li>
+                <li class="detail"> <a href="./detail-artist.html"><img class="fotosd" src="./img/ricky2.jpg" alt=""> <p class="namesx">Ricky Martin</p></a></li>
+                <li class="detail"> <a href="./detail-album.html"><img class="fotosd" src="./img/x.jpg" alt=""> <p class="namesx"> X (Deluxe)</p></a></li>
             </ul>
         </article>
     </main>
