--- a/detail-genres.html
+++ b/detail-genres.html
@@ -37,7 +37,7 @@
     </header>
             <main>
                 <article class="detallegenero">
-                        <h1>Latino</h1>
+                        <h1 class="pag">Latino</h1>
                         <img src="./img/latin.jpeg" alt="" class="fotoa"> 
                         <p>El "pop" latino​ es un género de música pop que tiene influencia latina, generalmente se aplica a la música originaria de Latinoamérica, pero también puede ser aplicada a la música pop de cualquier parte del mundo de habla derivados directamente del latín. El pop latino suele estar cantado en español, inglés y portugués. Además, muchos artistas internacionales de Francia e Italia a menudo cantan en español para atraer al público de habla hispana.</p>
                         <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/GhfotMfHH3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
