--- a/detail-track.html
+++ b/detail-track.html
@@ -45,7 +45,7 @@
                 <li>Álbum: Justice</li>
                 <li>Fecha de lanzamiento: 2021</li>
                 <li>Álbum: Justice</li>
-                <li><a href="./playlists.html"><img class="fav"src="./img/fav.jpg" alt=""></a></li>
+                <li><a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a></li>
         </ul>
         
       </article>
