--- a/playlists.html
+++ b/playlists.html
@@ -47,7 +47,7 @@
                     <section class="infopl">
                         <h2> <a href="./detail-track.html">Peaches</a> <a href="./playlists.html"></a></h2>
                         <h4><a href="./detail-artist.html"> Justin Bieber </a></h4>
-                        <img class="fotopla"src="./img/play.jpg" alt="">
+                        <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
                     </section>
                 </article>
                 <article class="cajapl">
@@ -57,7 +57,7 @@
                    <section class="infopl">
                     <h2> <a href="./detail-track.html">Aloha</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Maluma </a></h4>
-                     <img class="fotopla"src="./img/play.jpg" alt="">
+                    <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -67,7 +67,7 @@
                    <section class="infopl">
                     <h2> <a href="./detail-track.html">Eye Of The Tiger</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Survior </a></h4>
-                     <img class="fotopla"src="./img/play.jpg" alt="">
+                    <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -77,7 +77,7 @@
                    <section class="infopl">
                     <h2> <a href="./detail-track.html"> No Woman No Cry</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Bob Marley </a></h4>
-                     <img class="fotopla"src="./img/play.jpg" alt="">
+                    <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -87,7 +87,7 @@
                    <section class="infopl">
                      <h2> <a href="./detail-track.html">Terminales</a> <a href="./playlists.html"></a></h2>
                      <h4><a href="./detail-artist.html"> Cruzando el Charco </a></h4>
-                     <img class="fotopla"src="./img/play.jpg" alt="">
+                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
                    </section>
                 </article>
             </section>
