--- a/playlists.html
+++ b/playlists.html
@@ -48,6 +48,12 @@
                         <h2> <a href="./detail-track.html">Peaches</a> <a href="./playlists.html"></a></h2>
                         <h4><a href="./detail-artist.html"> Justin Bieber </a></h4>
                         <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
+                       <ul> 
+                           <li>
+                            <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                    <audio src="musica/ musik.mp3" autoplay loop></audio>
+                            </li>
+                         </ul>
                     </section>
                 </article>
                 <article class="cajapl">
@@ -58,6 +64,12 @@
                     <h2> <a href="./detail-track.html">Aloha</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Maluma </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
+                    <ul> 
+                        <li>
+                         <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                 <audio src="musica/ musik.mp3" autoplay loop></audio>
+                         </li>
+                      </ul>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -68,6 +80,12 @@
                     <h2> <a href="./detail-track.html">Eye Of The Tiger</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Survior </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
+                    <ul> 
+                        <li>
+                         <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                 <audio src="musica/ musik.mp3" autoplay loop></audio>
+                         </li>
+                      </ul>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -78,6 +96,12 @@
                     <h2> <a href="./detail-track.html"> No Woman No Cry</a> <a href="./playlists.html"></a></h2>
                     <h4><a href="./detail-artist.html"> Bob Marley </a></h4>
                     <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
+                    <ul> 
+                        <li>
+                         <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                 <audio src="musica/ musik.mp3" autoplay loop></audio>
+                         </li>
+                      </ul>
                    </section>
                 </article>
                 <article class="cajapl">
@@ -88,6 +112,12 @@
                      <h2> <a href="./detail-track.html">Terminales</a> <a href="./playlists.html"></a></h2>
                      <h4><a href="./detail-artist.html"> Cruzando el Charco </a></h4>
                      <a href="./detail-track.html"><img class="fotopla" src="./img/play.jpg" alt=""></a>
+                     <ul> 
+                        <li>
+                         <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                 <audio src="musica/ musik.mp3" autoplay loop></audio>
+                         </li>
+                      </ul>
                    </section>
                 </article>
             </section>
