--- a/detail-track.html
+++ b/detail-track.html
@@ -37,15 +37,18 @@
             </header>
     <main>
       <article class=detallestrack>
-              <h3>Peaches</h3> 
+              <h3 class>Peaches</h3> 
               <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
-                <li>Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
+                <li class="names">Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
+                <li>Álbum:<a href="./detail-album.html" class="names">Justice</a></li> 
                 <li>Artista invitado: Daniel Caesar, Giveon</li>
-                <li>Álbum: Justice</li>
                 <li>Fecha de lanzamiento: 2021</li>
-                <li>Álbum: Justice</li>
-                <li><a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a></li>
+                <li>
+                        <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                                <audio src="musica/ musik.mp3" autoplay loop></audio></li>
+                      <a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a>
+                </li>
         </ul>
         
       </article>
