--- a/search-results.html
+++ b/search-results.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
-    <title>SOUND-NOW</title>
+    <title>Resultados de Búsqueda</title>
 </head>
 <body>
     <header>
@@ -16,21 +16,20 @@
                         <div class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
                             <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                <a href="index.html" class="barratexto">Home</a>  
+                                <a href="generos.html" class="barratexto">Géneros</a>
                                 <a href="artistas.html" class="barratexto">Artistas</a>
                                 <a href="albumes.html" class="barratexto">Álbumes</a>
-                                <a href="generos.html" class="barratexto">Géneros</a>
+                                <a href="canciones.html" class="barratexto">Canciones</a>
                                 <a href="playlists.html" class="barratexto">Playlists</a>
-                                <div class="perfil-menu">
-                                    
-                        <section class="icperfil">
-                            <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                        </section>
-                         </div>
                         <form action="search-results.html" method="GET" class="buscar">
                             <input id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button"> Buscar</button>
                         </form>
+                        <div class="perfil-menu">
+                            <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                            </section>
+                             </div>
                 </section>
         </nav>
         </article>
