--- a/perfil.html
+++ b/perfil.html
@@ -54,7 +54,7 @@
             <div>
                 <input type="contraseña" name="ontraseña" placeholder="Contraseña" class="contrasena">
             </div>
-            <button type="submit" id="boton">Inicia Sesión</button>
+            <button class="iniciars" type="submit" id="boton">Inicia Sesión</button>
             </form> 
            <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
