--- a/index.html
+++ b/index.html
@@ -139,24 +139,15 @@
          </div>
 
     </main>
-    <footer> 
-        <article class="footer">  
-        <article class="instagram">
-                <article class="names">Seguinos:</article>
-                <article>
-                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </article>
-        </article>
-
-        <section class="equipo">
-                <h3>Equipo:</h3>
-                <ul class="miembros">
-                    <li class="nombre">Hania Achaval</li>
-                    <li class="nombre">Justina Basombrio</li>
-                    <li class="nombre">Malena Bensadon</li>
-                </ul>
+    <footer>
+        <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p class> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
         </section>
-    </section>
-         </footer>
+    </footer>
 </body>
 </html>
