--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
             </article>
             <article class="nombre"> 
-                <p class> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+                <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
             </article>
         </section>
     </footer>
