--- a/detail-album.html
+++ b/detail-album.html
@@ -41,24 +41,15 @@
                 <p>Justice es el sexto álbum de estudio del cantante canadiense<a href="https://www.instagram.com/justinbieber/" class="names">Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
                 <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
-    <footer> 
-        <article class="footer">  
-        <article class="instagram">
-                <article class="names">Seguinos:</article>
-                <article>
-                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </article>
-        </article>
-
-        <section class="equipo">
-                <h3>Equipo:</h3>
-                <ul class="miembros">
-                    <li class="nombre">Hania Achaval</li>
-                    <li class="nombre">Justina Basombrio</li>
-                    <li class="nombre">Malena Bensadon</li>
-                </ul>
+    <footer>
+        <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
         </section>
-    </section>
-         </footer>
+    </footer>
 </body>
 </html>
