--- a/detail-track.html
+++ b/detail-track.html
@@ -35,8 +35,8 @@
                 </article>
             </header>
     <main>
-      <article class=detallestrack>
-              <h3 class>Peaches</h3> 
+      <article class="detallestrack">
+              <h3 class="names">Peaches</h3> 
               <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <ul>
                 <li class="names">Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
@@ -45,31 +45,23 @@
                 <li>Fecha de lanzamiento: 2021</li>
                 <li>
                         <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
-                                <audio src="musica/ musik.mp3" autoplay loop></audio></li>
+                </li>
+                <li>
                       <a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a>
                 </li>
         </ul>
         
       </article>
     </main>
-    <footer> 
-            <article class="footer">  
-        <article class="instagram">
-                <article class="names">Seguinos:</article>
-                <article>
-                <a href="https://www.instagram.com/soundnow_/"><img src="./img/instagram-logo-3.png" alt="instagram" class="instagram"></a>
-                </article>
-        </article>
-
-        <section class="equipo">
-                <h3>Equipo:</h3>
-                <ul class="miembros">
-                    <li class="nombre">Hania Achaval</li>
-                    <li class="nombre">Justina Basombrio</li>
-                    <li class="nombre">Malena Bensadon</li>
-                </ul>
+    <footer>
+        <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
         </section>
-    </section>
-         </footer>
+    </footer>
 </body>
 </html>
